namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs
  labels:
    app: nodejs
