todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
  namespace: nodejs
spec:
  selector:
    app: todo-api
  ports:
    - protocol: TCP
      port: 80       # Exposed to Ingress
      targetPort: 8080
      nodePort: 30001
  type: NodePort   # Internal only
